# xdc_lfw_sat

./: README.md  requirements.txt  setup.cfg  setup.py
sat_modules/: config.py.example  download_landsat.py  download_sentinel.py  gdal_utils.py  landsat.py  landsat_utils.py  sentinel.py  sentinel_utils.py  utils.py
sat_server/: xdc_lfw_sat.py
