[metadata]
name = sat
summary = Service to download satellite images
description-file = 
    README.md
author = Daniel Garcia Diaz (IFCA)
author-email = garciad@ifca.unican.es
version = 0.0.1
license = MIT
home-page = https://github.com/garciadd/sat.git
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    sat_modules
    sat_server
